--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body{
+    width: 100vw;
     margin: 0px;
     padding: 0px;
     background-image: url(../assets/stars-1654074_1280.jpg);
@@ -114,11 +115,11 @@ p{
 .earth-circle{
     height: 4.76vw;
     width: 4.76vw;
-    border: -1px dotted #fff;
+    border: 1px dotted #fff;
     position: relative;
-    left: -8px;
-    top: -8px;
-    border-radius: 40px;
+    left: -17%;
+    top: -17%;
+    border-radius: 50%;
 }
 
 .earth-inner{
